# ComputationalGeometry

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LoggerInterface_Notes.txt  README.md  input.json
include/gaden/: AutoMergingPointCloud.hpp  AutoMergingPointsArray.hpp  Axes.hpp  BoundBox.hpp  Constants.hpp  ConvexHullTools.hpp  Edge.hpp  Exceptions.hpp  Face.hpp  Field.hpp  GlobalConfig.hpp  IndexedVector2.hpp  IndexedVector3.hpp  Logger.hpp  LoggerConfigurator.hpp  MinRect.hpp  ObjectBase.hpp  ObjectRegistry.hpp  PointCloudTools.hpp  Surface3.hpp  Tools.hpp  Vector2.hpp  Vector2Field.hpp  Vector3.hpp  Vector3Field.hpp  VectorNField.hpp  Work.hpp  base.hpp  version.hpp
junk/: ScalarField.hpp
src/: AutoMergingPointCloud.cpp  AutoMergingPointsArray.cpp  BoundBox.cpp  ConvexHullTools.cpp  Logger.cpp  LoggerConfigurator.cpp  PointCloudTools.cpp  Surface3.cpp  Tools.cpp  VectorNField.cpp  Work.cpp  base.cpp  main.cpp
tests/: complex_part.csv  sampleOutput.txt  simple_part.csv
